# vanity_cockatrice-rs

./: .gitignore  Cargo.toml  names.json  shell.nix
src/: deck.rs  lib.rs  main.rs
