[package]
name = "vanity_cockatrice-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "vanity_cockatrice"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha-1 = "0.10.1"
byteorder = "1.4.3"
serde_json = "1.0"
rayon = "1.7.0"

[profile.release]
lto = "thin"
